--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favIcon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-movie</title>
+    <title>Weather app</title>
   </head>
   <body class="dark">
     <div id="root"></div>
